# back/src/swagger.json
@@ -37,22 +37,11 @@
         "operationId": "get",
         "parameters": [
           {
-            "name": "name",
+            "name": "filters",
             "in": "query",
-            "description": "Hotel Name",
+            "description": "Filters hotels",
             "required": false,
-            "type": "string"
-          },
-          {
-            "name": "stars",
-            "in": "query",
-            "description": "Hotel stars",
-            "required": false,
-            "type": "array",
-            "items": {
-              "type": "number"
-            },
-            "collectionFormat": "multi"
+            "type": "object"
           }
         ],
         "responses": {
